Fix border gap on footer of '/login'

--- a/algobot/static/algobot/assets/css/login-page.css
+++ b/algobot/static/algobot/assets/css/login-page.css
@@ -2,7 +2,7 @@
     background: url("../img/bg-signup.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    height: 86vh;
+    height: 86.5vh;
 }
 
 .login-container {
